@@ -79,7 +79,7 @@
   <h1>Results</h1>
   <div>Message: <span id="results-message"></span></div>
   <div>Count: <span id="results-count"></span></div>
-  <div><button id="show-all-results">Show all results</button><button id="set-style">Set style</button><button id="reset-style">Reset style</button></div>
+  <div><button id="show-all-results">Show all results</button><button id="open-options">Open options</button><button id="set-style">Set style</button><button id="reset-style">Reset style</button></div>
   <table id="results-detals">
     <caption>Details</caption>
     <tbody></tbody>
